--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Ryan Harris <harris.ucla@gmail.com> (https://github.com/ryan-harris)",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
